# databricks-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  NOTICE  Pipfile  README.md  databricks.yml  profiles.yml  pyproject.toml  requirements.txt  sdk_system_tables.py  setup.py  unit-requirements.txt
.claude/commands/: project-costs.md  sql-diagram.md  sql-lineage.md
.dbx/: project.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: onpush.yml
conf/: deployment.yml  wf_template.yml  wf_template_serverless.yml  workflow.yml
cost_report/: 2026-07-16.md
docs/: ci_cd.drawio
reports/cost/: 2026-07-22.md
reports/sql-diagram/: job_spend_plan.mmd  job_spend_plan.sql
resources/: jobs.yml  orders_dashboard.lvdash.json  wf_template.yml  wf_template_serverless.yml
scripts/: _sdk_sql.py  dqx_checks.yml  dqx_implementation.py  generate_template_workflow.py  project_costs.py  sdk_analyze_job_costs.py  sdk_create_sp.py  sdk_drop_tables.py  sdk_generate_sdp_pipeline.py  sdk_generate_template_job.py  sdk_init_workspace.py  sdk_system_tables.py  sdk_truncate_tables.py  sdk_workspace_and_account.py  sql_diagram.py  sql_lineage.py  star_history.py
specs/: CHANGELOG.md  README.md  architecture.md  data-model.md  test-plan.md  tooling.md  workflow.md
src/template/: baseTask.py  commonSchemas.py  config.ini  config.py  extract_source1.py  extract_source2.py  generate_orders.py  generate_orders_agg.py  main.py  setup.py  task1.py  task2.py  validate.py
src/template/job1/: extract_source1.py  extract_source2.py  generate_orders.py  generate_orders_agg.py  health_check.py  integration_setup.py  integration_validate.py  seed_sources.py
src/template/job1_sdp/: pipeline.py  transforms.py
tasks/: baseTask.py  config.py  main.py  task1.py  task2.py
tests/: __init__.py  template_test.py
tests/job1/: integration_setup.py  integration_validate.py  unit_test.py  unit_test_sdp.py
tests/job1_sdp/: integration_validate.py
tests/scripts/: test_sql_diagram.py
