[project]
name = "template"
version = "0.0.1"
description = "wheel file based on template/src"
authors = [
    {name = "user@company.com"}
]
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "funcy==2.0",
    "databricks-sdk==0.57.0",
    "databricks-labs-dqx==0.7.0",
]

[project.optional-dependencies]
dev = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pyarrow==19.0.1",
    "pydantic==2.10.6",
    "coverage==7.6.1",
    "pre-commit==4.0.1",
    "pytest==8.3.5",
    "pytest-cov==5.0.0",
    "pyspark==4.0.0",
    "jinja2==3.1.5",
]

[project.entry-points.packages]
main = "template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/template"]

[tool.hatch.build.targets.wheel]
packages = ["src/template"]

[tool.hatch.version]
path = "src/template/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term --cov-report=xml:coverage_reports/coverage.xml --cov-report=html:coverage_reports/html"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]
