[project]
name = "template"
version = "0.0.1"
description = "wheel file based on template/src"
authors = [
    {name = "Andre Salvati"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.12.*"
dependencies = [
    "databricks-labs-dqx==0.12.0", 
]

[project.optional-dependencies]
dev = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pyarrow==21.0.0",
    "pydantic==2.10.6",
    "coverage==7.6.1",
    "pre-commit==4.0.1",
    "pytest==8.3.5",
    "pytest-cov==5.0.0",
    "pyspark==4.1.0",
    "databricks-bundles>=0.298.0",
]

[project.scripts]
main = "template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template", "tests"]

[tool.hatch.version]
path = "src/template/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
# "unit_test_*.py" catches unit_test_sdp.py — the SDP suite ends in "_sdp.py" and
# would otherwise match neither "test_*.py" nor "*_test.py" and be silently skipped.
python_files = ["test_*.py", "*_test.py", "unit_test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term --cov-report=xml:coverage_reports/coverage.xml --cov-report=html:coverage_reports/html"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# spark is injected by the SDP runtime — not a normal Python import
"src/template/job1_sdp/pipeline.py" = ["F821"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]
