[project]
name = "template"
version = "0.0.1"
description = "wheel file based on template/src"
authors = [
    {name = "Andre Salvati"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.12.*"
dependencies = [
    "databricks-labs-dqx==0.15.0",
]

[project.optional-dependencies]
dev = [
    # Frozen to mirror serverless environment version 5 (the runtime the wheel executes
    # on): Spark 4.1.0 via Databricks Connect 18, plus its exact pandas/numpy/pyarrow.
    # Do not bump these to the newest PyPI release — that puts unit tests ahead of the
    # runtime. They move only when `client=` in scripts/sdk_generate_template_job.py does.
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pyarrow==21.0.0",
    "pyspark==4.1.0",
    "pydantic==2.13.4",
    "coverage==7.15.2",
    "pre-commit==4.6.1",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "databricks-bundles>=1.9.0",
    "sqlglot==30.13.0",
]

[project.scripts]
main = "template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template", "tests"]

[tool.hatch.version]
path = "src/template/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
# "unit_test_*.py" catches unit_test_sdp.py — the SDP suite ends in "_sdp.py" and
# would otherwise match neither "test_*.py" nor "*_test.py" and be silently skipped.
python_files = ["test_*.py", "*_test.py", "unit_test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term --cov-report=xml:reports/coverage/coverage.xml --cov-report=html:reports/coverage/html"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# spark is injected by the SDP runtime — not a normal Python import
"src/template/job1_sdp/pipeline.py" = ["F821"]

[tool.ruff.lint.isort]
# `_sdk_sql` is a local sibling module in scripts/, not a third-party package —
# without this, isort files it under the databricks imports.
known-first-party = ["_sdk_sql"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]
